<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#201E25"
    tools:context=".presentation.Registration">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_button"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow_back"
        android:textColor="@color/text_color_white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textColor="#fdfdfd"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/account_create_label"/>

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/main_logo_text_to_speach"
        app:srcCompat="@android:mipmap/sym_def_app_icon" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:autofillHints="user"
        android:ems="10"
        android:inputType="text"
        android:textColor="#fdfdfd"
        android:textColorHint="#6a6a6a"
        android:hint="@string/user_login_text"/>

    <EditText
        android:id="@+id/user_email"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:autofillHints="user@gmail.com"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#fdfdfd"
        android:textColorHint="#6a6a6a"
        android:hint="@string/user_email_text"/>

    <EditText
        android:id="@+id/user_password"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:autofillHints="password"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#fdfdfd"
        android:textColorHint="#6a6a6a"
        android:hint="@string/user_password_text"/>

    <Button
        android:id="@+id/button_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#e2a6"
        android:text="@string/button_reg_text" />

</LinearLayout>